--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "author": "UdeA_Team",
   "license": "ISC",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
+  "type": "module",
   "dependencies": {
+    "apollo-server-express": "^3.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^16.0.1",
     "mongoose": "^6.0.13",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
